# GA

./: ga_mcp_server.py  pyproject.toml
docs/: MCP_OPENCLAW_ZH.md  MCP_SERVER_IMPLEMENTATION_ZH.md  WORKER_MIGRATION.md
genericagent/: __init__.py
genericagent/mcp_server/: README.md  __init__.py  audit.py  auth.py  config.py  ga_mcp_server.py  safety.py  server.py
genericagent/mcp_server/tests/: manual_sse_check.py  test_auth.py  test_dryrun.py  test_safety.py  test_v3_tools.py
genericagent/mcp_server/tools/: __init__.py  adb.py  browser_cdp.py  coding_agents.py  desktop.py  dryrun.py  execute.py  files.py  screen.py  skills.py  status.py  ui.py
genericagent/mcp_server/vendor_ext/: __init__.py  desktop_linux.py  desktop_mac.py
